--- a/htdocs/ban.manage.html
+++ b/htdocs/ban.manage.html
@@ -1,17 +1,63 @@
-<div class="BanAddDialog">
-	<input class="SteamId" />
+<div class="BanAddDialog form-inline">
+	<input type="text" name="SteamId" class="form-control SteamId" placeholder="SteamId" />
+	<select name="BanType" class="form-control">
+% foreach (@banTypes) {
+		<option value="<% $_->{Id} %>"><% $_->{Name} %></option>
+% }
+	</select>
+	<input type="text" name="Expire" class="form-control" />
+	<input type="checkbox" name="Permanent" class="form-control" />
+	<input type="text" name="Reason" class="form-control" placeholder="Reason" />
 </div>
 <button class="OpenBanDialog">Add</button>
+<style>
+ul.ui-autocomplete { width: 965px; }
+.BanAddDialog input[name="SteamId"] { width: 160px; }
+.BanAddDialog input[name="Expire"] { width: 90px; }
+.BanAddDialog input[name="Permanent"] { width: 16px; }
+.BanAddDialog input[name="Reason"] { width: 420px; }
+</style>
 <script type="text/javascript" charset="utf-8">
 $(function(){
 	var $BanAddDialog = $('.BanAddDialog');
 
 	$BanAddDialog.dialog({
 		autoOpen: false
+		,width: 1000
+		,height: 160
+		,draggable: false
+		,resizable: false
+		,modal: true
 		,buttons: [{
 			text: 'Ban'
 			,click: function() {
-				$( this ).dialog( "close" );
+				var $dialog = $(this);
+				
+				if ($dialog.attr('AccountId')) {
+					console.log(
+						$dialog.attr('AccountId')
+						,$dialog.find('[name="BanType"]').val()
+						,$dialog.find('[name="Expire"]').val()
+						,$dialog.find('[name="Permanent"]').prop('checked')
+						,$dialog.find('[name="Reason"]').val()
+					);
+					$.ajax({
+						type: 'POST',
+						url: '/ban/add.html',
+						dataType: 'json',
+						data: {
+							AccountId: $dialog.attr('AccountId')
+							,BanTypeId: $dialog.find('[name="BanType"]').val()
+							,Expire: $dialog.find('[name="Expire"]').val()
+							,Permanent: ($dialog.find('[name="Permanent"]').prop('checked') ? 1 : 0)
+							,Reason: $dialog.find('[name="Reason"]').val()
+						},
+						success: function(data) {
+							console.log(data);
+						}
+					});
+					$dialog.dialog('close');
+				}
 			}
 		}]
 	});
@@ -23,7 +69,8 @@ $(function(){
 	$BanAddDialog.find('input.SteamId:first').focus(function(){
 		$(this).val();
 	}).autocomplete({
-		source: function(request, response) {
+		appendTo: 'body'
+		,source: function(request, response) {
 			$.ajax({
 				type: 'POST'
 				,url: 'player.autocomplete.html'
@@ -33,15 +80,58 @@ $(function(){
 				}
 				,success: function(data) {
 					response($.map(data, function(item) {
-						item.value = item.AccId;
+						item.value = item.SteamId;
 						return item;
 					}));
 				}
 			});
 		}
 		,select: function(event ,ui) {
-			console.log(event, ui);
+			$BanAddDialog.attr('AccountId', ui.item.AccountId);
 		}
+	}).data('ui-autocomplete')._renderItem = function(ul, item) {
+		 return $('<li>')
+			.append(
+				$('<a>')
+					.append(
+						$('<div>').css({width: 180, float: 'left'}).html(item.SteamId)
+					)
+					.append(
+						$('<div>').css({width: 330, float: 'left'}).html(item.BattlEyeGUID)
+					)
+					.append(
+						$('<div>').css({width: 440, float: 'left'}).html(item.PlayerName)
+					)
+					.append(
+						$('<div>').css({clear: 'both'})
+					)
+			)
+			.appendTo(ul);
+	};
+	
+	$BanAddDialog.find('input[name="Expire"]').datepicker({
+		dateFormat: 'dd.mm.yy'
+		,defaultDate: new Date()
+		,showButtonPanel: true
+		,numberOfMonths: 3
+		,showWeek: true
+		,firstDay: 1
 	});
 });
 </script>
+<%init>
+my @banTypes;
+my $sth = $r->pnotes('DBI')->{MySQL}->prepare(q~
+	SELECT
+		id																		AS Id
+		,s_name																	AS Name
+		,s_description															AS Description
+	FROM
+		steam.banType;
+~);
+$sth->execute();
+while (my $row = $sth->fetchrow_hashref()) {
+	push(@banTypes, $row);
+}
+$sth->finish();	
+</%init>
