--- a/htdocs/ban.manage.html
+++ b/htdocs/ban.manage.html
@@ -1,134 +1,9 @@
-<div class="BanAddDialog form-inline">
-	<input type="text" name="SteamId" class="form-control SteamId" placeholder="SteamId" />
-	<select name="BanType" class="form-control">
-% foreach (@banTypes) {
-		<option value="<% $_->{Id} %>"><% $_->{Name} %></option>
-% }
-	</select>
-	<input type="text" name="Expire" class="form-control" />
-	<input type="checkbox" name="Permanent" class="form-control" />
-	<input type="text" name="Reason" class="form-control" placeholder="Reason" />
-</div>
+<& /ban/add.dialog.html &>
 <button class="OpenBanDialog">Add</button>
-<br />
-<table class="table table-striped">
-% foreach ($SteamBan->getBans()) {
-	<tr BanId="<% $_->{BanId} %>">
-		<td><% $_->{SteamId} %></td>
-		<td><% $_->{BattlEyeGUID} %></td>
-		<td><% $_->{BanTypeName} %></td>
-		<td><% $_->{BanReason} %></td>
-		<td <% ($_->{BanPermanent} ? 'PermaBan' : '') %>><% ($_->{BanPermanent} ? 'PermaBan' : $_->{BanExpire}) %></td>
-		<td><button class="UnBan">DELETE</button></td>
-	</tr>
-% }
-</table>
-<style>
-ul.ui-autocomplete { width: 965px; }
-.BanAddDialog input[name="SteamId"] { width: 160px; }
-.BanAddDialog input[name="Expire"] { width: 90px; }
-.BanAddDialog input[name="Permanent"] { width: 16px; }
-.BanAddDialog input[name="Reason"] { width: 410px; }
-</style>
 <script type="text/javascript" charset="utf-8">
 $(function(){
-	var $BanAddDialog = $('.BanAddDialog');
-
-	$BanAddDialog.dialog({
-		autoOpen: false
-		,width: 1000
-		,height: 160
-		,draggable: false
-		,resizable: false
-		,modal: true
-		,buttons: [{
-			text: 'Ban'
-			,click: function() {
-				var $dialog = $(this);
-				
-				if ($dialog.attr('AccountId')) {
-					console.log(
-						$dialog.attr('AccountId')
-						,$dialog.find('[name="BanType"]').val()
-						,$dialog.find('[name="Expire"]').val()
-						,$dialog.find('[name="Permanent"]').prop('checked')
-						,$dialog.find('[name="Reason"]').val()
-					);
-					$.ajax({
-						type: 'POST',
-						url: '/ban/add.html',
-						dataType: 'json',
-						data: {
-							AccountId: $dialog.attr('AccountId')
-							,BanTypeId: $dialog.find('[name="BanType"]').val()
-							,Expire: $dialog.find('[name="Expire"]').val()
-							,Permanent: ($dialog.find('[name="Permanent"]').prop('checked') ? 1 : 0)
-							,Reason: $dialog.find('[name="Reason"]').val()
-						},
-						success: function(data) {
-							console.log(data);
-						}
-					});
-					$dialog.dialog('close');
-				}
-			}
-		}]
-	});
-
 	$('.OpenBanDialog').click(function(){
 		$BanAddDialog.dialog('open');
-	});
-
-	$BanAddDialog.find('input.SteamId:first').focus(function(){
-		$(this).val();
-	}).autocomplete({
-		appendTo: 'body'
-		,source: function(request, response) {
-			$.ajax({
-				type: 'POST'
-				,url: 'player.autocomplete.html'
-				,dataType: 'json'
-				,data: {
-					SteamId: request.term
-				}
-				,success: function(data) {
-					response($.map(data, function(item) {
-						item.value = item.SteamId;
-						return item;
-					}));
-				}
-			});
-		}
-		,select: function(event ,ui) {
-			$BanAddDialog.attr('AccountId', ui.item.AccountId);
-		}
-	}).data('ui-autocomplete')._renderItem = function(ul, item) {
-		 return $('<li>')
-			.append(
-				$('<a>')
-					.append(
-						$('<div>').css({width: 180, float: 'left'}).html(item.SteamId)
-					)
-					.append(
-						$('<div>').css({width: 330, float: 'left'}).html(item.BattlEyeGUID)
-					)
-					.append(
-						$('<div>').css({width: 440, float: 'left'}).html(item.PlayerName)
-					)
-					.append(
-						$('<div>').css({clear: 'both'})
-					)
-			)
-			.appendTo(ul);
-	};
-	
-	$BanAddDialog.find('input[name="Expire"]').datepicker({
-		dateFormat: 'dd.mm.yy'
-		,defaultDate: new Date()
-		,showButtonPanel: true
-		,numberOfMonths: 3
-		,showWeek: true
-		,firstDay: 1
 	});
 });
 </script>
