--- a/htdocs/player.online.html
+++ b/htdocs/player.online.html
@@ -1,7 +1,7 @@
 % if ($ENV{HTTP_X_REQUESTED_WITH} eq 'XMLHttpRequest') {
 % foreach my $rconLine (split(/\n/, $rconRet)) { if ($rconLine =~ /^(\d+)[ ]+((\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}):\d{4,5})[ ]+\d+[ ]+(\w{32})(\([^)]+\))[ ]+(.*)/) {
 %	my $steamId = getSteamId($4);
-	<tr BattlEyeGUID="<% $4 %>" SteamId="<% $steamId %>">
+	<tr BattlEyeGUID="<% $4 %>" SteamId="<% $steamId %>" AccountId="<% getAccountId($4) %>">
 		<td><% $1 %></td>
 		<td><% $2 %></td>
 		<td><% $GeoReader->omni(ip => $3)->country()->iso_code() %></td>
@@ -16,6 +16,7 @@
 	</tr>
 % } }
 % } else {
+<& /ban/add.dialog.html &>
 <select name="selectList">
 % foreach my $server (@serverList) {
 	<option value="<% $server->{ServerId} %>"><% $server->{Comment} %></option>
@@ -65,7 +66,8 @@ $(function(){
 	});
 	$table.on('click', 'button[name]', function(event) {
 		var $button = $(event.currentTarget);
-		
+		var $row = $button.find('tr:first');
+
 		if ($button.is('[name="KickPlayer"]')) {
 			$.ajax({
 				url: 'player.kick.html'
@@ -76,20 +78,10 @@ $(function(){
 			});
 		}
 		if ($button.is('[name="BanPlayer"]')) {
-			$.ajax({
-				url: 'player.kick.html'
-				,data: {
-					ServerId: $serverList.val()
-					,BattlEyeGUID: $button.parents('tr:first').attr('BattlEyeGUID')
-					,Ban: 1
-				}
-				//,beforeSend: function(jqXHR, settings) {
-				//	$table.find('tr:not(:first-child)').remove();
-				//}
-				//,success: function(data, textStatus, jqXHR) {
-				//	$table.append(data);
-				//}
-			});
+			if ($row.attr('AccountId') > 0) {
+				$BanAddDialog.find('[name="SteamId"]').val($row.attr('SteamId'));
+				$BanAddDialog.attr('AccountId', $row.attr('AccountId')).dialog('open');
+			}
 		}
 	});
 });
@@ -114,7 +106,7 @@ while (my $row = $sth->fetchrow_hashref()) {
 	push(@serverList, $row);
 }
 $sth->finish();
-	
+
 if ($ServerId > 0) {
 	my $sth = $r->pnotes('DBI')->{MySQL}->prepare(q~
 		SELECT
@@ -141,6 +133,28 @@ my $GeoReader = GeoIP2::Database::Reader->new(
     locales => ['de']
 );
 
+sub getAccountId {
+	my $guid = shift;
+	my $accountId;
+	my $sth = $r->pnotes('DBI')->{MySQL}->prepare(q~
+		SELECT
+			id																	AS AccountId
+		FROM
+			steam.account
+		WHERE
+			s_battleyeguid = ?
+	~);
+	$sth->execute(
+		$guid
+	);
+	while (my $row = $sth->fetchrow_hashref()) {
+		$accountId = $row->{AccountId};
+	}
+	$sth->finish();
+
+	return $accountId;
+}
+
 sub getSteamId {
 	my $guid = shift;
 	my $steamId;
@@ -156,10 +170,10 @@ sub getSteamId {
 		$guid
 	);
 	while (my $row = $sth->fetchrow_hashref()) {
-		$steamId = $row->{SteamId}
+		$steamId = $row->{SteamId};
 	}
 	$sth->finish();
-	
+
 	return $steamId;
 }
 
@@ -180,7 +194,7 @@ sub vacCheck {
 		$vac = $row->{VacBanned};
 	}
 	$sth->finish();
-	
+
 	return $vac;
 }
 </%init>
