--- a/htdocs/ban/add.dialog.html
+++ b/htdocs/ban/add.dialog.html
@@ -78,7 +78,7 @@ $(function(){
 		,source: function(request, response) {
 			$.ajax({
 				type: 'POST'
-				,url: '/player.autocomplete.html'
+				,url: '/player/autocomplete.html'
 				,dataType: 'json'
 				,data: {
 					SteamId: request.term
