Revert "Autocomplete update"
This reverts commit 55b07a9d2e921fc3990fba7359e02f7702cf855b.

--- a/htdocs/ban/add.dialog.html
+++ b/htdocs/ban/add.dialog.html
@@ -81,7 +81,7 @@ $(function(){
 				,url: '/player/autocomplete.html'
 				,dataType: 'json'
 				,data: {
-					q: request.term
+					SteamId: request.term
 				}
 				,success: function(data) {
 					response($.map(data, function(item) {
